--- a/GoodsManageSystem.rc
+++ b/GoodsManageSystem.rc
@@ -119,7 +119,7 @@ STYLE WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_POPUP | WS_VISIBLE | WS_CAPTION |
     WS_SYSMENU | WS_THICKFRAME
 EXSTYLE WS_EX_APPWINDOW
 CAPTION "LDD办公系统"
-FONT 14, "宋体"
+FONT 14, "宋体", 0, 0, 0x1
 BEGIN
     CONTROL         "Tab1",IDC_TAB1,"SysTabControl32",TCS_FORCEICONLEFT | 
                     TCS_FORCELABELLEFT | TCS_BUTTONS | TCS_FIXEDWIDTH | 
@@ -133,15 +133,16 @@ IDD_DIALOG_CLIENT DIALOG DISCARDABLE  0, 0, 680, 430
 STYLE WS_CHILD
 FONT 12, "宋体"
 BEGIN
-    EDITTEXT        IDC_EDIT_CLIENT,64,5,74,14,ES_AUTOHSCROLL
-    DEFPUSHBUTTON   "查询权限",IDC_BUTTON_CLIENT_SELECT,160,5,38,14
-    PUSHBUTTON      "增加用户",IDC_BUTTON_CLIENT_ADD,222,5,38,14
+    EDITTEXT        IDC_EDIT_CLIENT,35,5,74,14,ES_AUTOHSCROLL
+    DEFPUSHBUTTON   "查询权限",IDC_BUTTON_CLIENT_SELECT,123,5,38,14
+    PUSHBUTTON      "增加用户",IDC_BUTTON_CLIENT_ADD,173,5,38,14
     CONTROL         "List1",IDC_LIST_CLIENT,"SysListView32",LVS_REPORT | 
                     WS_BORDER | WS_TABSTOP,0,25,680,405
-    PUSHBUTTON      "修改密码",IDC_BUTTON_MODIFY_PASSWD,346,5,38,14
-    PUSHBUTTON      "删除用户",IDC_BUTTON_DELETE_USER,408,5,38,14
-    PUSHBUTTON      "修改权限",IDC_BUTTON1,284,5,38,14
-    LTEXT           "姓名：",IDC_STATIC,21,8,25,8
+    PUSHBUTTON      "修改密码",IDC_BUTTON_MODIFY_PASSWD,276,5,38,14
+    PUSHBUTTON      "删除用户",IDC_BUTTON_DELETE_USER,328,5,38,14
+    PUSHBUTTON      "修改权限",IDC_BUTTON1,225,5,38,14
+    LTEXT           "姓名：",IDC_STATIC,8,8,25,8
+    PUSHBUTTON      "导出",IDC_EXCEL,374,5,38,14
 END
 
 IDD_DIALOG_SELL DIALOG DISCARDABLE  0, 0, 680, 430
@@ -171,20 +172,20 @@ FONT 12, "宋体"
 BEGIN
     EDITTEXT        IDC_EDIT_BASEINFO,575,5,14,14,ES_AUTOHSCROLL | NOT 
                     WS_VISIBLE
-    DEFPUSHBUTTON   "查询",IDC_BUTTON_SELL_SELECT,298,19,38,14
+    DEFPUSHBUTTON   "查询",IDC_BUTTON_SELL_SELECT,298,10,38,14
     PUSHBUTTON      "新增订单",IDC_BUTTON_BASEINFO_ADD,489,4,36,14,NOT 
                     WS_VISIBLE
-    COMBOBOX        IDC_COMBO_BASEINFO,49,21,63,60,CBS_DROPDOWNLIST | 
+    COMBOBOX        IDC_COMBO_BASEINFO,49,12,63,60,CBS_DROPDOWNLIST | 
                     CBS_SORT | WS_VSCROLL | WS_TABSTOP
     CONTROL         "List1",IDC_LIST_BASEINFO,"SysListView32",LVS_REPORT | 
-                    WS_BORDER | WS_TABSTOP,0,52,680,377
-    LTEXT           "查询方式：",IDC_STATIC,5,25,41,8
-    PUSHBUTTON      "EXCEL",IDC_BUTTON_EXCEL,369,19,50,14
+                    WS_BORDER | WS_TABSTOP,0,35,680,377
+    LTEXT           "查询方式：",IDC_STATIC,5,16,41,8
+    PUSHBUTTON      "导出",IDC_BUTTON_EXCEL,369,10,38,14
     PUSHBUTTON      "修改订单",IDC_BUTTON1,535,4,27,14,NOT WS_VISIBLE
     CONTROL         "DateTimePicker1",IDC_DATETIMEPICKER1,"SysDateTimePick32",
-                    DTS_RIGHTALIGN | WS_TABSTOP,141,18,63,15
+                    DTS_RIGHTALIGN | WS_TABSTOP,141,9,63,15
     CONTROL         "DateTimePicker2",IDC_DATETIMEPICKER2,"SysDateTimePick32",
-                    DTS_RIGHTALIGN | WS_TABSTOP,209,18,63,15
+                    DTS_RIGHTALIGN | WS_TABSTOP,209,9,63,15
 END
 
 IDD_DIALOG_INPUT_BASEINFO DIALOG DISCARDABLE  0, 0, 443, 274
@@ -338,20 +339,21 @@ IDD_DIALOG_SCHEDULE DIALOG DISCARDABLE  0, 0, 680, 430
 STYLE WS_CHILD
 FONT 12, "宋体"
 BEGIN
-    DEFPUSHBUTTON   "查询",IDC_BUTTON_SCHDEULE_SELECT,430,4,38,14
-    COMBOBOX        IDC_COMBO_SCHEDULE,49,5,81,60,CBS_DROPDOWNLIST | 
+    DEFPUSHBUTTON   "查询",IDC_BUTTON_SCHDEULE_SELECT,394,4,38,14
+    COMBOBOX        IDC_COMBO_SCHEDULE,45,5,81,60,CBS_DROPDOWNLIST | 
                     CBS_SORT | WS_VSCROLL | WS_TABSTOP
     CONTROL         "List1",IDC_LIST_SCHDEULE,"SysListView32",LVS_REPORT | 
                     WS_BORDER | WS_TABSTOP,0,25,680,405
-    LTEXT           "查询方式：",IDC_STATIC,5,10,41,8
-    COMBOBOX        IDC_COMBO2,140,5,78,67,CBS_DROPDOWNLIST | CBS_SORT | 
+    LTEXT           "查询方式：",IDC_STATIC,5,10,40,8
+    COMBOBOX        IDC_COMBO2,128,5,78,67,CBS_DROPDOWNLIST | CBS_SORT | 
                     WS_VSCROLL | WS_TABSTOP
     CONTROL         "DateTimePicker1",IDC_DATETIMEPICKER1,"SysDateTimePick32",
-                    DTS_RIGHTALIGN | WS_TABSTOP,262,4,60,15
+                    DTS_RIGHTALIGN | WS_TABSTOP,235,4,60,15
     CONTROL         "DateTimePicker2",IDC_DATETIMEPICKER2,"SysDateTimePick32",
-                    DTS_RIGHTALIGN | WS_TABSTOP,350,3,59,15
-    LTEXT           "从",IDC_STATIC,244,8,9,8
-    LTEXT           "到",IDC_STATIC,332,6,9,8
+                    DTS_RIGHTALIGN | WS_TABSTOP,323,3,59,15
+    LTEXT           "从",IDC_STATIC,217,8,9,8
+    LTEXT           "到",IDC_STATIC,305,6,9,8
+    PUSHBUTTON      "导出",IDC_EXCEL,438,4,38,14
 END
 
 IDD_DIALOG_POST DIALOG DISCARDABLE  0, 0, 680, 430
@@ -418,6 +420,7 @@ BEGIN
     CONTROL         "List1",IDC_LIST_DETAIL,"SysListView32",LVS_REPORT | 
                     WS_BORDER | WS_TABSTOP,0,25,680,405
     LTEXT           "订单号：",IDC_STATIC,5,10,33,8
+    PUSHBUTTON      "导出",IDC_EXCEL,209,5,38,14
 END
 
 IDD_DIALOG_OUTPUT DIALOG DISCARDABLE  0, 0, 680, 430
@@ -436,6 +439,7 @@ BEGIN
                     DTS_RIGHTALIGN | WS_TABSTOP,256,3,59,15
     LTEXT           "从",IDC_STATIC,150,8,9,8
     LTEXT           "到",IDC_STATIC,238,6,9,8
+    PUSHBUTTON      "导出",IDC_EXCEL,389,4,38,14
 END
 
 IDD_DIALOG_MODIFY_PASSWD_ADMIN DIALOG DISCARDABLE  0, 0, 187, 148
@@ -498,7 +502,7 @@ END
 
 IDD_DIALOG_NEW_LIST DIALOGEX 0, 0, 540, 402
 STYLE WS_CHILD
-FONT 10, "宋体"
+FONT 10, "宋体", 0, 0, 0x1
 BEGIN
     EDITTEXT        IDC_EDIT_LISTID,86,47,74,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_LISTTNAME,218,47,74,14,ES_AUTOHSCROLL
@@ -752,6 +756,7 @@ BEGIN
                     DTS_RIGHTALIGN | WS_TABSTOP,121,10,59,15
     LTEXT           "从",-1,15,15,9,8
     LTEXT           "到",-1,103,13,9,8
+    PUSHBUTTON      "导出",IDC_EXCEL,270,11,38,14
 END
 
 IDD_DIALOG_UNPOST DIALOG DISCARDABLE  0, 0, 680, 430
