--- a/GoodsManageSystem.rc
+++ b/GoodsManageSystem.rc
@@ -119,7 +119,7 @@ STYLE WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_POPUP | WS_VISIBLE | WS_CAPTION |
     WS_SYSMENU | WS_THICKFRAME
 EXSTYLE WS_EX_APPWINDOW
 CAPTION "LDD办公系统"
-FONT 14, "宋体", 0, 0, 0x1
+FONT 14, "宋体"
 BEGIN
     CONTROL         "Tab1",IDC_TAB1,"SysTabControl32",TCS_FORCEICONLEFT | 
                     TCS_FORCELABELLEFT | TCS_BUTTONS | TCS_FIXEDWIDTH | 
@@ -129,7 +129,7 @@ BEGIN
                     0,0,92,261
 END
 
-IDD_DIALOG_CLIENT DIALOG DISCARDABLE  0, 0, 680, 430
+IDD_DIALOG_CLIENT DIALOG DISCARDABLE  0, 0, 528, 362
 STYLE WS_CHILD
 FONT 12, "宋体"
 BEGIN
@@ -137,7 +137,7 @@ BEGIN
     DEFPUSHBUTTON   "查询权限",IDC_BUTTON_CLIENT_SELECT,123,5,38,14
     PUSHBUTTON      "增加用户",IDC_BUTTON_CLIENT_ADD,173,5,38,14
     CONTROL         "List1",IDC_LIST_CLIENT,"SysListView32",LVS_REPORT | 
-                    WS_BORDER | WS_TABSTOP,0,25,680,405
+                    WS_BORDER | WS_TABSTOP,0,25,528,337
     PUSHBUTTON      "修改密码",IDC_BUTTON_MODIFY_PASSWD,276,5,38,14
     PUSHBUTTON      "删除用户",IDC_BUTTON_DELETE_USER,328,5,38,14
     PUSHBUTTON      "修改权限",IDC_BUTTON1,225,5,38,14
@@ -166,26 +166,21 @@ FONT 10, "System"
 BEGIN
 END
 
-IDD_DIALOG_BASEINFO DIALOG DISCARDABLE  0, 0, 680, 430
+IDD_DIALOG_BASEINFO DIALOG DISCARDABLE  0, 0, 528, 361
 STYLE WS_CHILD
 FONT 12, "宋体"
 BEGIN
-    EDITTEXT        IDC_EDIT_BASEINFO,575,5,14,14,ES_AUTOHSCROLL | NOT 
-                    WS_VISIBLE
-    DEFPUSHBUTTON   "查询",IDC_BUTTON_SELL_SELECT,298,10,38,14
-    PUSHBUTTON      "新增订单",IDC_BUTTON_BASEINFO_ADD,489,4,36,14,NOT 
-                    WS_VISIBLE
-    COMBOBOX        IDC_COMBO_BASEINFO,49,12,63,60,CBS_DROPDOWNLIST | 
+    DEFPUSHBUTTON   "查询",IDC_BUTTON_SELL_SELECT,298,4,38,14
+    COMBOBOX        IDC_COMBO_BASEINFO,49,6,63,60,CBS_DROPDOWNLIST | 
                     CBS_SORT | WS_VSCROLL | WS_TABSTOP
     CONTROL         "List1",IDC_LIST_BASEINFO,"SysListView32",LVS_REPORT | 
-                    WS_BORDER | WS_TABSTOP,0,35,680,377
-    LTEXT           "查询方式：",IDC_STATIC,5,16,41,8
-    PUSHBUTTON      "导出",IDC_BUTTON_EXCEL,369,10,38,14
-    PUSHBUTTON      "修改订单",IDC_BUTTON1,535,4,27,14,NOT WS_VISIBLE
+                    WS_BORDER | WS_TABSTOP,0,25,528,336
+    LTEXT           "查询方式：",IDC_STATIC,5,10,41,8
+    PUSHBUTTON      "导出",IDC_BUTTON_EXCEL,355,4,38,14
     CONTROL         "DateTimePicker1",IDC_DATETIMEPICKER1,"SysDateTimePick32",
-                    DTS_RIGHTALIGN | WS_TABSTOP,141,9,63,15
+                    DTS_RIGHTALIGN | WS_TABSTOP,141,3,63,15
     CONTROL         "DateTimePicker2",IDC_DATETIMEPICKER2,"SysDateTimePick32",
-                    DTS_RIGHTALIGN | WS_TABSTOP,209,9,63,15
+                    DTS_RIGHTALIGN | WS_TABSTOP,209,3,63,15
 END
 
 IDD_DIALOG_INPUT_BASEINFO DIALOG DISCARDABLE  0, 0, 443, 274
@@ -335,7 +330,7 @@ BEGIN
     LTEXT           "用户名：",IDC_STATIC,26,25,31,8
 END
 
-IDD_DIALOG_SCHEDULE DIALOG DISCARDABLE  0, 0, 680, 430
+IDD_DIALOG_SCHEDULE DIALOG DISCARDABLE  0, 0, 528, 363
 STYLE WS_CHILD
 FONT 12, "宋体"
 BEGIN
@@ -343,7 +338,7 @@ BEGIN
     COMBOBOX        IDC_COMBO_SCHEDULE,45,5,81,60,CBS_DROPDOWNLIST | 
                     CBS_SORT | WS_VSCROLL | WS_TABSTOP
     CONTROL         "List1",IDC_LIST_SCHDEULE,"SysListView32",LVS_REPORT | 
-                    WS_BORDER | WS_TABSTOP,0,25,680,405
+                    WS_BORDER | WS_TABSTOP,0,25,528,338
     LTEXT           "查询方式：",IDC_STATIC,5,10,40,8
     COMBOBOX        IDC_COMBO2,128,5,78,67,CBS_DROPDOWNLIST | CBS_SORT | 
                     WS_VSCROLL | WS_TABSTOP
@@ -411,19 +406,19 @@ BEGIN
     LTEXT           "密码：",-1,30,48,23,8
 END
 
-IDD_DIALOG_DETAIL DIALOG DISCARDABLE  0, 0, 680, 430
+IDD_DIALOG_DETAIL DIALOG DISCARDABLE  0, 0, 528, 362
 STYLE WS_CHILD
 FONT 12, "宋体"
 BEGIN
     EDITTEXT        IDC_EDIT_DETAIL,46,5,96,14,ES_AUTOHSCROLL
     DEFPUSHBUTTON   "查询",IDC_BUTTON_DETAIL_SELECT,156,5,38,14
     CONTROL         "List1",IDC_LIST_DETAIL,"SysListView32",LVS_REPORT | 
-                    WS_BORDER | WS_TABSTOP,0,25,680,405
+                    WS_BORDER | WS_TABSTOP,0,25,528,337
     LTEXT           "订单号：",IDC_STATIC,5,10,33,8
     PUSHBUTTON      "导出",IDC_EXCEL,209,5,38,14
 END
 
-IDD_DIALOG_OUTPUT DIALOG DISCARDABLE  0, 0, 680, 430
+IDD_DIALOG_OUTPUT DIALOG DISCARDABLE  0, 0, 528, 363
 STYLE WS_CHILD
 FONT 12, "宋体"
 BEGIN
@@ -431,7 +426,7 @@ BEGIN
     COMBOBOX        IDC_COMBO_OUTPUT,49,5,81,60,CBS_DROPDOWNLIST | CBS_SORT | 
                     WS_VSCROLL | WS_TABSTOP
     CONTROL         "List1",IDC_LIST_OUTPUT,"SysListView32",LVS_REPORT | 
-                    WS_BORDER | WS_TABSTOP,0,25,680,405
+                    WS_BORDER | WS_TABSTOP,0,25,528,338
     LTEXT           "部门：",IDC_STATIC,5,10,25,8
     CONTROL         "DateTimePicker1",IDC_DATETIMEPICKER1,"SysDateTimePick32",
                     DTS_RIGHTALIGN | WS_TABSTOP,168,4,60,15
@@ -743,20 +738,20 @@ BEGIN
     LTEXT           "cm3",IDC_STATIC,496,273,13,8
 END
 
-IDD_DIALOG_MAKEING DIALOG DISCARDABLE  0, 0, 680, 438
+IDD_DIALOG_MAKEING DIALOG DISCARDABLE  0, 0, 528, 363
 STYLE WS_CHILD
 FONT 12, "宋体"
 BEGIN
-    DEFPUSHBUTTON   "查询",IDC_BUTTON_SCHDEULE_SELECT,201,11,38,14
+    DEFPUSHBUTTON   "查询",IDC_BUTTON_SCHDEULE_SELECT,201,6,38,14
     CONTROL         "List1",IDC_LIST_SCHDEULE,"SysListView32",LVS_REPORT | 
-                    WS_BORDER | WS_TABSTOP,0,33,680,405
+                    WS_BORDER | WS_TABSTOP,0,27,528,336
     CONTROL         "DateTimePicker1",IDC_DATETIMEPICKER1,"SysDateTimePick32",
-                    DTS_RIGHTALIGN | WS_TABSTOP,33,11,60,15
+                    DTS_RIGHTALIGN | WS_TABSTOP,33,6,60,15
     CONTROL         "DateTimePicker2",IDC_DATETIMEPICKER2,"SysDateTimePick32",
-                    DTS_RIGHTALIGN | WS_TABSTOP,121,10,59,15
-    LTEXT           "从",-1,15,15,9,8
-    LTEXT           "到",-1,103,13,9,8
-    PUSHBUTTON      "导出",IDC_EXCEL,270,11,38,14
+                    DTS_RIGHTALIGN | WS_TABSTOP,121,5,59,15
+    LTEXT           "从",-1,15,10,9,8
+    LTEXT           "到",-1,103,8,9,8
+    PUSHBUTTON      "导出",IDC_EXCEL,270,6,38,14
 END
 
 IDD_DIALOG_UNPOST DIALOG DISCARDABLE  0, 0, 680, 430
@@ -946,11 +941,6 @@ BEGIN
         RIGHTMARGIN, 536
         TOPMARGIN, 7
         BOTTOMMARGIN, 351
-    END
-
-    IDD_DIALOG_MAKEING, DIALOG
-    BEGIN
-        BOTTOMMARGIN, 430
     END
 END
 #endif    // APSTUDIO_INVOKED
