--- a/GoodsManageSystem.rc
+++ b/GoodsManageSystem.rc
@@ -114,9 +114,9 @@ BEGIN
     LTEXT           "武汉华仪自动化有限公司",IDC_STATIC,42,41,89,8
 END
 
-IDD_GOODSMANAGESYSTEM_DIALOG DIALOGEX 0, 0, 497, 284
-STYLE WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_POPUP | WS_VISIBLE | WS_CAPTION | 
-    WS_SYSMENU | WS_THICKFRAME
+IDD_GOODSMANAGESYSTEM_DIALOG DIALOGEX 0, 0, 525, 312
+STYLE WS_MINIMIZEBOX | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU | 
+    WS_THICKFRAME
 EXSTYLE WS_EX_APPWINDOW
 CAPTION "LDD办公系统"
 FONT 14, "宋体"
@@ -126,7 +126,7 @@ BEGIN
                     TCS_TOOLTIPS | NOT WS_VISIBLE,216,12,68,43,
                     WS_EX_ACCEPTFILES
     CONTROL         "Tree1",IDC_TREE1,"SysTreeView32",WS_BORDER | WS_TABSTOP,
-                    0,0,92,261
+                    0,0,92,312
 END
 
 IDD_DIALOG_CLIENT DIALOG DISCARDABLE  0, 0, 528, 362
@@ -855,7 +855,7 @@ GUIDELINES DESIGNINFO DISCARDABLE
 BEGIN
     IDD_GOODSMANAGESYSTEM_DIALOG, DIALOG
     BEGIN
-        RIGHTMARGIN, 493
+        RIGHTMARGIN, 521
     END
 
     IDD_DIALOG_INPUT_BASEINFO, DIALOG
