--- a/GoodsManageSystem.rc
+++ b/GoodsManageSystem.rc
@@ -115,8 +115,8 @@ BEGIN
 END
 
 IDD_GOODSMANAGESYSTEM_DIALOG DIALOGEX 0, 0, 525, 312
-STYLE WS_MINIMIZEBOX | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU | 
-    WS_THICKFRAME
+STYLE WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_POPUP | WS_VISIBLE | WS_CAPTION | 
+    WS_SYSMENU | WS_THICKFRAME
 EXSTYLE WS_EX_APPWINDOW
 CAPTION "LDD办公系统"
 FONT 14, "宋体"
@@ -166,7 +166,7 @@ FONT 10, "System"
 BEGIN
 END
 
-IDD_DIALOG_BASEINFO DIALOG DISCARDABLE  0, 0, 528, 361
+IDD_DIALOG_BASEINFO DIALOG DISCARDABLE  0, 0, 410, 316
 STYLE WS_CHILD
 FONT 12, "宋体"
 BEGIN
@@ -174,7 +174,7 @@ BEGIN
     COMBOBOX        IDC_COMBO_BASEINFO,49,6,63,60,CBS_DROPDOWNLIST | 
                     CBS_SORT | WS_VSCROLL | WS_TABSTOP
     CONTROL         "List1",IDC_LIST_BASEINFO,"SysListView32",LVS_REPORT | 
-                    WS_BORDER | WS_TABSTOP,0,25,528,336
+                    WS_BORDER | WS_TABSTOP,0,25,401,283
     LTEXT           "查询方式：",IDC_STATIC,5,10,41,8
     PUSHBUTTON      "导出",IDC_BUTTON_EXCEL,355,4,38,14
     CONTROL         "DateTimePicker1",IDC_DATETIMEPICKER1,"SysDateTimePick32",
@@ -240,7 +240,7 @@ END
 IDD_DIALOG_ADD_USER DIALOG DISCARDABLE  0, 0, 383, 249
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "增加用户"
-FONT 10, "宋体"
+FONT 12, "宋体"
 BEGIN
     EDITTEXT        IDC_EDIT_USER_NAME,74,27,89,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_PASSWD,74,50,89,14,ES_PASSWORD | ES_AUTOHSCROLL
@@ -272,9 +272,9 @@ BEGIN
                     BS_AUTOCHECKBOX | WS_TABSTOP,291,174,54,10
     DEFPUSHBUTTON   "增加用户",IDOK,74,223,50,14
     PUSHBUTTON      "取消",IDCANCEL,192,223,50,14
-    LTEXT           "用户名：",IDC_STATIC,21,27,31,8
-    LTEXT           "密码：",IDC_STATIC,21,56,23,8
-    LTEXT           "确认密码：",IDC_STATIC,21,83,38,8
+    LTEXT           "用户名：",IDC_STATIC,21,27,35,8
+    LTEXT           "密码：",IDC_STATIC,21,56,33,8
+    LTEXT           "确认密码：",IDC_STATIC,21,83,47,8
     GROUPBOX        "用户权限设置",IDC_STATIC,15,109,348,94
     CONTROL         "权限管理",IDC_CHECK_PERMISSION,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,291,128,46,10
@@ -303,7 +303,7 @@ END
 IDD_DIALOG_MODIFY_PASSWD DIALOG DISCARDABLE  0, 0, 187, 168
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "修改密码"
-FONT 10, "宋体"
+FONT 12, "宋体"
 BEGIN
     EDITTEXT        IDC_EDIT_USER,77,22,74,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_PASSWD,77,49,74,14,ES_PASSWORD | ES_AUTOHSCROLL
@@ -311,23 +311,23 @@ BEGIN
                     ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_NEW_PASSWD2,77,99,74,14,ES_PASSWORD | 
                     ES_AUTOHSCROLL
-    DEFPUSHBUTTON   "修改密码",IDOK,31,138,50,14
+    DEFPUSHBUTTON   "修改密码",IDOK,29,138,50,14
     PUSHBUTTON      "取消",IDCANCEL,97,139,50,14
-    LTEXT           "用户名：",IDC_STATIC,27,22,31,8
-    LTEXT           "原始密码：",IDC_STATIC,27,51,38,8
-    LTEXT           "新密码：",IDC_STATIC,27,75,31,8
-    LTEXT           "确认新密码：",IDC_STATIC,27,106,46,8
+    LTEXT           "用户名：",IDC_STATIC,27,22,41,8
+    LTEXT           "原始密码：",IDC_STATIC,27,51,48,8
+    LTEXT           "新密码：",IDC_STATIC,27,77,45,8
+    LTEXT           "确认新密码：",IDC_STATIC,27,104,49,8
 END
 
 IDD_DIALOG_DELETE_USER DIALOG DISCARDABLE  0, 0, 187, 96
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "删除用户"
-FONT 10, "宋体"
+FONT 12, "宋体"
 BEGIN
     EDITTEXT        IDC_EDIT_USER,70,22,74,14,ES_AUTOHSCROLL
     DEFPUSHBUTTON   "删除用户",IDOK,29,59,50,14
     PUSHBUTTON      "取消",IDCANCEL,96,59,50,14
-    LTEXT           "用户名：",IDC_STATIC,26,25,31,8
+    LTEXT           "用户名：",IDC_STATIC,26,25,37,8
 END
 
 IDD_DIALOG_SCHEDULE DIALOG DISCARDABLE  0, 0, 528, 363
@@ -353,7 +353,7 @@ END
 
 IDD_DIALOG_POST DIALOG DISCARDABLE  0, 0, 680, 430
 STYLE WS_CHILD
-FONT 9, "宋体"
+FONT 12, "宋体"
 BEGIN
     COMBOBOX        IDC_COMBO_DEPARTMENT,81,33,81,60,CBS_DROPDOWNLIST | 
                     CBS_SORT | WS_VSCROLL | WS_TABSTOP
@@ -423,7 +423,7 @@ STYLE WS_CHILD
 FONT 12, "宋体"
 BEGIN
     DEFPUSHBUTTON   "查询",IDOK,336,4,38,14
-    COMBOBOX        IDC_COMBO_OUTPUT,49,5,81,60,CBS_DROPDOWNLIST | CBS_SORT | 
+    COMBOBOX        IDC_COMBO_OUTPUT,39,5,81,60,CBS_DROPDOWNLIST | CBS_SORT | 
                     WS_VSCROLL | WS_TABSTOP
     CONTROL         "List1",IDC_LIST_OUTPUT,"SysListView32",LVS_REPORT | 
                     WS_BORDER | WS_TABSTOP,0,25,528,338
@@ -440,7 +440,7 @@ END
 IDD_DIALOG_MODIFY_PASSWD_ADMIN DIALOG DISCARDABLE  0, 0, 187, 148
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "修改密码"
-FONT 10, "宋体"
+FONT 12, "宋体"
 BEGIN
     EDITTEXT        IDC_EDIT_USER,77,22,74,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_NEW_PASSWD,77,47,74,14,ES_PASSWORD | 
@@ -449,15 +449,15 @@ BEGIN
                     ES_AUTOHSCROLL
     DEFPUSHBUTTON   "修改密码",IDOK,31,113,50,14
     PUSHBUTTON      "取消",IDCANCEL,97,114,50,14
-    LTEXT           "用户名：",-1,27,22,31,8
-    LTEXT           "新密码：",-1,27,50,31,8
-    LTEXT           "确认新密码：",-1,27,81,46,8
+    LTEXT           "用户名：",-1,27,26,41,8
+    LTEXT           "新密码：",-1,27,51,42,8
+    LTEXT           "确认新密码：",-1,27,79,50,8
 END
 
 IDD_DIALOG_MODIFY_PERMISSION DIALOG DISCARDABLE  0, 0, 378, 193
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "修改权限"
-FONT 10, "宋体"
+FONT 12, "宋体"
 BEGIN
     EDITTEXT        IDC_EDIT_USER_NAME,74,27,89,14,ES_AUTOHSCROLL
     CONTROL         "提交订单",IDC_CHECK_SAVE_LIST,"Button",BS_AUTOCHECKBOX | 
@@ -486,7 +486,7 @@ BEGIN
                     BS_AUTOCHECKBOX | WS_TABSTOP,288,118,54,10
     DEFPUSHBUTTON   "修改权限",ID_MODIFY,74,167,50,14
     PUSHBUTTON      "取消",IDCANCEL,192,167,50,14
-    LTEXT           "用户名：",-1,21,27,31,8
+    LTEXT           "用户名：",-1,21,27,46,8
     GROUPBOX        "用户权限设置",-1,15,53,348,94
     PUSHBUTTON      "查询权限",IDOK,187,26,50,14
     CONTROL         "权限管理",IDC_CHECK_PERMISSION,"Button",BS_AUTOCHECKBOX | 
@@ -742,21 +742,21 @@ IDD_DIALOG_MAKEING DIALOG DISCARDABLE  0, 0, 528, 363
 STYLE WS_CHILD
 FONT 12, "宋体"
 BEGIN
-    DEFPUSHBUTTON   "查询",IDC_BUTTON_SCHDEULE_SELECT,201,6,38,14
+    DEFPUSHBUTTON   "查询",IDC_BUTTON_SCHDEULE_SELECT,189,6,38,14
     CONTROL         "List1",IDC_LIST_SCHDEULE,"SysListView32",LVS_REPORT | 
                     WS_BORDER | WS_TABSTOP,0,27,528,336
     CONTROL         "DateTimePicker1",IDC_DATETIMEPICKER1,"SysDateTimePick32",
-                    DTS_RIGHTALIGN | WS_TABSTOP,33,6,60,15
+                    DTS_RIGHTALIGN | WS_TABSTOP,23,6,60,15
     CONTROL         "DateTimePicker2",IDC_DATETIMEPICKER2,"SysDateTimePick32",
-                    DTS_RIGHTALIGN | WS_TABSTOP,121,5,59,15
-    LTEXT           "从",-1,15,10,9,8
-    LTEXT           "到",-1,103,8,9,8
-    PUSHBUTTON      "导出",IDC_EXCEL,270,6,38,14
+                    DTS_RIGHTALIGN | WS_TABSTOP,111,5,59,15
+    LTEXT           "从",-1,5,10,9,8
+    LTEXT           "到",-1,93,8,9,8
+    PUSHBUTTON      "导出",IDC_EXCEL,241,6,38,14
 END
 
 IDD_DIALOG_UNPOST DIALOG DISCARDABLE  0, 0, 680, 430
 STYLE WS_CHILD
-FONT 9, "宋体"
+FONT 12, "宋体"
 BEGIN
     COMBOBOX        IDC_COMBO_DEPARTMENT,81,33,81,60,CBS_DROPDOWNLIST | 
                     CBS_SORT | WS_VSCROLL | WS_TABSTOP
