--- a/GoodsManageSystem.rc
+++ b/GoodsManageSystem.rc
@@ -119,7 +119,7 @@ STYLE WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_POPUP | WS_VISIBLE | WS_CAPTION |
     WS_SYSMENU | WS_THICKFRAME
 EXSTYLE WS_EX_APPWINDOW
 CAPTION "LDD办公系统"
-FONT 14, "宋体"
+FONT 14, "宋体", 0, 0, 0x1
 BEGIN
     CONTROL         "Tab1",IDC_TAB1,"SysTabControl32",TCS_FORCEICONLEFT | 
                     TCS_FORCELABELLEFT | TCS_BUTTONS | TCS_FIXEDWIDTH | 
@@ -285,8 +285,7 @@ BEGIN
 END
 
 IDD_DIALOG_LOGIN DIALOG DISCARDABLE  0, 0, 211, 135
-STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "欢迎登陆LDD办公系统"
+STYLE WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 FONT 12, "宋体"
 BEGIN
     EDITTEXT        IDC_EDIT_USER,67,19,100,14,ES_AUTOHSCROLL
@@ -299,7 +298,6 @@ BEGIN
     LTEXT           "密码：",IDC_STATIC,30,48,27,8
     LTEXT           "服务器：",IDC_STATIC,30,78,35,8
     PUSHBUTTON      "修改密码",IDC_BUTTON_MODIFY_PASSWD,117,111,50,14
-    LTEXT           "正在连接服务器......",IDC_STATIC_CONNECT,30,96,123,12
 END
 
 IDD_DIALOG_MODIFY_PASSWD DIALOG DISCARDABLE  0, 0, 187, 168
@@ -499,7 +497,7 @@ END
 
 IDD_DIALOG_NEW_LIST DIALOGEX 0, 0, 540, 402
 STYLE WS_CHILD
-FONT 10, "宋体"
+FONT 10, "宋体", 0, 0, 0x1
 BEGIN
     EDITTEXT        IDC_EDIT_LISTID,88,47,74,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_LISTTNAME,218,47,74,14,ES_AUTOHSCROLL
