1.remove the onpaint about login dialog, or the messagebox after the login dialog.

--- a/GoodsManageSystem.rc
+++ b/GoodsManageSystem.rc
@@ -285,7 +285,7 @@ BEGIN
 END
 
 IDD_DIALOG_LOGIN DIALOG DISCARDABLE  0, 0, 211, 135
-STYLE WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
+STYLE DS_MODALFRAME | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 FONT 12, "ËÎÌו"
 BEGIN
     EDITTEXT        IDC_EDIT_USER,67,19,100,14,ES_AUTOHSCROLL
