1.修复bug，当输入一个没有的订单号，查询数据库时，软件会挂掉。

--- a/GoodsManageSystem.rc
+++ b/GoodsManageSystem.rc
@@ -380,16 +380,16 @@ BEGIN
     LTEXT           "过账数量：",IDC_STATIC,186,153,41,8
     LTEXT           "过账单号：",IDC_STATIC,37,182,41,8
     LTEXT           "过账数量：",IDC_STATIC,186,182,41,8
-    LTEXT           "总体积：",IDC_STATIC1,305,66,47,8
-    EDITTEXT        IDC_EDIT_VOLUME_SENDID,355,60,74,14,ES_AUTOHSCROLL
-    LTEXT           "总体积：",IDC_STATIC2,305,94,47,8
-    EDITTEXT        IDC_EDIT_VOLUME_SENDID2,355,88,74,14,ES_AUTOHSCROLL
-    LTEXT           "总体积：",IDC_STATIC3,305,124,47,8
-    EDITTEXT        IDC_EDIT_VOLUME_SENDID3,355,118,74,14,ES_AUTOHSCROLL
-    LTEXT           "总体积：",IDC_STATIC4,305,153,47,8
-    EDITTEXT        IDC_EDIT_VOLUME_SENDID4,355,147,74,14,ES_AUTOHSCROLL
-    LTEXT           "总体积：",IDC_STATIC5,305,182,47,8
-    EDITTEXT        IDC_EDIT_VOLUME_SENDID5,355,176,74,14,ES_AUTOHSCROLL
+    LTEXT           "总体积(cm3)：",IDC_STATIC1,305,66,68,8
+    EDITTEXT        IDC_EDIT_VOLUME_SENDID,374,60,74,14,ES_AUTOHSCROLL
+    LTEXT           "总体积(cm3)：",IDC_STATIC2,305,94,68,8
+    EDITTEXT        IDC_EDIT_VOLUME_SENDID2,374,88,74,14,ES_AUTOHSCROLL
+    LTEXT           "总体积(cm3)：",IDC_STATIC3,305,124,68,8
+    EDITTEXT        IDC_EDIT_VOLUME_SENDID3,374,118,74,14,ES_AUTOHSCROLL
+    LTEXT           "总体积(cm3)：",IDC_STATIC4,305,153,68,8
+    EDITTEXT        IDC_EDIT_VOLUME_SENDID4,374,147,74,14,ES_AUTOHSCROLL
+    LTEXT           "总体积(cm3)：",IDC_STATIC5,305,182,68,8
+    EDITTEXT        IDC_EDIT_VOLUME_SENDID5,374,176,74,14,ES_AUTOHSCROLL
 END
 
 IDD_DIALOG_LOGIN2 DIALOG DISCARDABLE  0, 0, 195, 118
@@ -497,7 +497,7 @@ END
 
 IDD_DIALOG_NEW_LIST DIALOGEX 0, 0, 540, 402
 STYLE WS_CHILD
-FONT 10, "宋体", 0, 0, 0x1
+FONT 10, "宋体"
 BEGIN
     EDITTEXT        IDC_EDIT_LISTID,88,47,74,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_LISTTNAME,218,47,74,14,ES_AUTOHSCROLL
@@ -526,16 +526,16 @@ BEGIN
                     WS_TABSTOP,394,153,38,10
     EDITTEXT        IDC_EDIT_SIZE,86,173,224,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_TOTEL_NUMBER,355,173,48,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_MATERIAL,449,173,63,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_MATERIAL,452,173,63,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_COLOR,86,197,48,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_PAINT,178,197,48,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_SHINE,264,197,48,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_BOTTOM,355,197,48,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_BILL,449,197,63,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_BILL,452,197,63,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_USAGE,86,221,131,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_ERRORRANGE,264,221,48,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_MONDY,355,221,48,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_VOLUEME,449,221,42,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_VOLUEME,452,221,42,14,ES_AUTOHSCROLL
     CONTROL         "",IDC_RICHEDIT_OTHER,"RICHEDIT",ES_MULTILINE | 
                     ES_AUTOVSCROLL | WS_BORDER | WS_TABSTOP,86,245,424,25
     PUSHBUTTON      "保存订单",IDC_BUTTON_SUBMITLIST,130,290,50,14
@@ -554,11 +554,11 @@ BEGIN
     LTEXT           "联系电话：",IDC_STATIC,176,75,41,8
     LTEXT           "签单金额：",IDC_STATIC,312,227,38,8
     LTEXT           "尺寸：",IDC_STATIC,43,179,31,8
-    LTEXT           "制作材料：",IDC_STATIC,408,179,40,8
+    LTEXT           "制作材料：",IDC_STATIC,411,179,40,8
     LTEXT           "颜色：",IDC_STATIC,43,203,32,8
     LTEXT           "喷漆：",IDC_STATIC,142,203,30,8
     LTEXT           "底座搭配：",IDC_STATIC,312,203,40,8
-    LTEXT           "体积：",IDC_STATIC,408,227,25,8
+    LTEXT           "体积：",IDC_STATIC,425,227,25,8
     LTEXT           "误差范围：",IDC_STATIC,219,227,38,8
     LTEXT           "其他要求：",IDC_STATIC,43,251,41,8
     LTEXT           "数量：",IDC_STATIC,73,360,31,8
@@ -566,14 +566,15 @@ BEGIN
     LTEXT           "经办人：",IDC_STATIC,310,53,37,8
     LTEXT           "生产数量：",IDC_STATIC,312,179,41,8
     LTEXT           "打磨：",IDC_STATIC,234,203,26,8
-    LTEXT           "发票随寄：",IDC_STATIC,408,203,40,8
+    LTEXT           "发票随寄：",IDC_STATIC,411,203,40,8
     LTEXT           "用途：",IDC_STATIC,43,227,30,8
     GROUPBOX        "下单",IDC_STATIC,14,336,513,51
     GROUPBOX        "基本信息",IDC_STATIC,28,32,489,83
     GROUPBOX        "制作要求",IDC_STATIC,28,133,490,143
     LTEXT           "（",IDC_STATIC,324,155,8,8
     LTEXT           "）",IDC_STATIC,436,155,8,8
-    LTEXT           "cm3",IDC_STATIC,495,222,13,8,0,WS_EX_TRANSPARENT
+    LTEXT           "cm3",IDC_STATIC,498,222,13,8,0,WS_EX_TRANSPARENT
+    LTEXT           "元",IDC_STATIC,405,225,12,8
 END
 
 IDD_DIALOG_MODIFY_LIST1 DIALOG DISCARDABLE  0, 0, 540, 471
@@ -610,16 +611,16 @@ BEGIN
                     WS_TABSTOP,394,203,38,10
     EDITTEXT        IDC_EDIT_SIZE,86,223,224,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_TOTEL_NUMBER,355,223,48,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_MATERIAL,450,223,63,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_MATERIAL,453,223,63,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_COLOR,86,247,48,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_PAINT,178,247,48,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_SHINE,264,247,48,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_BOTTOM,355,247,48,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_BILL,450,247,63,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_BILL,453,247,63,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_USAGE,86,271,131,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_ERRORRANGE,264,271,48,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_MONDY,355,271,48,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_VOLUEME,450,271,46,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_VOLUEME,453,271,46,14,ES_AUTOHSCROLL
     CONTROL         "",IDC_RICHEDIT_OTHER,"RICHEDIT",ES_MULTILINE | 
                     ES_AUTOVSCROLL | WS_BORDER | WS_TABSTOP,86,295,422,26
     PUSHBUTTON      "修改订单",IDC_BUTTON_MODIFYLIST,130,340,50,14
@@ -637,11 +638,11 @@ BEGIN
     LTEXT           "联系电话：",IDC_STATIC,176,125,42,8
     LTEXT           "签单金额：",IDC_STATIC,312,277,41,8
     LTEXT           "尺寸：",IDC_STATIC,43,229,27,8
-    LTEXT           "制作材料：",IDC_STATIC,408,229,42,8
+    LTEXT           "制作材料：",IDC_STATIC,415,229,40,8
     LTEXT           "颜色：",IDC_STATIC,43,253,27,8
     LTEXT           "喷漆：",IDC_STATIC,142,253,27,8
     LTEXT           "底座搭配：",IDC_STATIC,312,253,43,8
-    LTEXT           "体积：",IDC_STATIC,408,277,27,8
+    LTEXT           "体积：",IDC_STATIC,426,277,27,8
     LTEXT           "误差范围：",IDC_STATIC,219,277,40,8
     LTEXT           "其他要求：",IDC_STATIC,43,301,41,8
     LTEXT           "数量：",IDC_STATIC,73,410,31,8
@@ -649,7 +650,7 @@ BEGIN
     LTEXT           "经办人：",IDC_STATIC,310,103,37,8
     LTEXT           "生产数量：",IDC_STATIC,312,229,40,8
     LTEXT           "打磨：",IDC_STATIC,234,253,26,8
-    LTEXT           "发票随寄：",IDC_STATIC,408,253,41,8
+    LTEXT           "发票随寄：",IDC_STATIC,415,253,37,8
     LTEXT           "用途：",IDC_STATIC,43,277,29,8
     GROUPBOX        "下单",IDC_STATIC,14,386,513,51
     GROUPBOX        "基本信息",IDC_STATIC,28,82,489,83
@@ -657,7 +658,8 @@ BEGIN
     LTEXT           "（",IDC_STATIC,324,205,8,8
     LTEXT           "）",IDC_STATIC,436,205,8,8
     LTEXT           "订单号：",IDC_STATIC,21,28,37,8
-    LTEXT           "cm3",IDC_STATIC,498,274,13,8
+    LTEXT           "cm3",IDC_STATIC,501,274,13,8
+    LTEXT           "元",IDC_STATIC,408,277,8,8
 END
 
 IDD_DIALOG_LIST_QUERY DIALOG DISCARDABLE  0, 0, 539, 357
