add new function:tips,fi,rclickpost,unpost 1.登录提醒，定时提醒，提醒设置 2.在制品进度中，右键可以过账 3.增加财务统计 4.重新处理退账

--- a/GoodsManageSystem.rc
+++ b/GoodsManageSystem.rc
@@ -104,14 +104,15 @@ IDI_ICON4               ICON    DISCARDABLE     "res\\20140516100538697_easyicon
 
 IDD_ABOUTBOX DIALOG DISCARDABLE  0, 0, 237, 68
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "关于 货物管理系统"
+CAPTION "关于 LDD自动化办公系统"
 FONT 9, "宋体"
 BEGIN
     ICON            IDR_MAINFRAME,IDC_STATIC,11,17,20,20
-    LTEXT           "货物管理系统 1.0 版",IDC_STATIC,40,10,119,8,SS_NOPREFIX
-    LTEXT           "版权所有 (C) 2010",IDC_STATIC,40,25,119,8
+    LTEXT           "LDD自动化办公系统 1.1 版",IDC_STATIC,40,10,119,8,
+                    SS_NOPREFIX
+    LTEXT           "版权所有 (C) 2014",IDC_STATIC,40,25,119,8
     DEFPUSHBUTTON   "确定",IDOK,169,7,50,14,WS_GROUP
-    LTEXT           "武汉华仪自动化有限公司",IDC_STATIC,42,41,89,8
+    LTEXT           "苏州誉磐信息科技有限公司",IDC_STATIC,42,41,97,8
 END
 
 IDD_GOODSMANAGESYSTEM_DIALOG DIALOGEX 0, 0, 525, 312
@@ -119,7 +120,8 @@ STYLE WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_POPUP | WS_VISIBLE | WS_CAPTION |
     WS_SYSMENU | WS_THICKFRAME
 EXSTYLE WS_EX_APPWINDOW
 CAPTION "LDD办公系统"
-FONT 14, "宋体", 0, 0, 0x1
+MENU IDR_MENU_TIPS
+FONT 14, "宋体"
 BEGIN
     CONTROL         "Tab1",IDC_TAB1,"SysTabControl32",TCS_FORCEICONLEFT | 
                     TCS_FORCELABELLEFT | TCS_BUTTONS | TCS_FIXEDWIDTH | 
@@ -289,6 +291,8 @@ BEGIN
     LTEXT           "确认密码：",IDC_STATIC,195,56,47,8
     GROUPBOX        "用户权限设置",IDC_STATIC,15,83,348,94
     LTEXT           "部门：",IDC_STATIC,195,30,25,8
+    CONTROL         "财务",IDC_CHECK_FI,"Button",BS_AUTOCHECKBOX | 
+                    WS_TABSTOP,325,124,32,10
 END
 
 IDD_DIALOG_LOGIN DIALOG DISCARDABLE  0, 0, 211, 135
@@ -425,27 +429,31 @@ BEGIN
     PUSHBUTTON      "导出",IDC_EXCEL,209,5,38,14
 END
 
-IDD_DIALOG_OUTPUT DIALOG DISCARDABLE  0, 0, 420, 310
+IDD_DIALOG_FI DIALOG DISCARDABLE  0, 0, 420, 317
 STYLE WS_CHILD
 FONT 12, "宋体"
 BEGIN
-    DEFPUSHBUTTON   "查询",IDOK,331,3,38,14
-    COMBOBOX        IDC_COMBO_OUTPUT,112,5,60,124,CBS_DROPDOWNLIST | 
-                    CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    CONTROL         "List1",IDC_LIST_OUTPUT,"SysListView32",LVS_REPORT | 
-                    WS_BORDER | WS_TABSTOP,0,24,413,286
-    LTEXT           "部门：",IDC_STATIC_DEPARTMENT,98,9,8,8,NOT WS_VISIBLE
+    EDITTEXT        IDC_EDIT_LISTID_ADD,63,14,59,14,ES_AUTOHSCROLL
+    CONTROL         "是否收款",IDC_CHECK_GATHERING,"Button",BS_AUTOCHECKBOX | 
+                    WS_TABSTOP,147,16,48,10
+    CONTROL         "是否开发票",IDC_CHECK_BILLING,"Button",BS_AUTOCHECKBOX | 
+                    WS_TABSTOP,228,16,56,10
+    PUSHBUTTON      "增加/修改",IDC_BUTTON_FIADD,295,14,50,14
+    EDITTEXT        IDC_EDIT_LISTID_QUERY,61,51,60,14,ES_AUTOHSCROLL
     CONTROL         "DateTimePicker1",IDC_DATETIMEPICKER1,"SysDateTimePick32",
-                    DTS_RIGHTALIGN | WS_TABSTOP,196,2,60,15
+                    DTS_RIGHTALIGN | WS_TABSTOP,148,49,60,15
     CONTROL         "DateTimePicker2",IDC_DATETIMEPICKER2,"SysDateTimePick32",
-                    DTS_RIGHTALIGN | WS_TABSTOP,269,2,59,15
-    LTEXT           "从",IDC_STATIC,183,7,9,8
-    LTEXT           "到",IDC_STATIC,257,7,9,8
-    PUSHBUTTON      "导出",IDC_EXCEL,375,3,38,14
-    LTEXT           "查询方式：",IDC_STATIC,6,9,41,8
-    COMBOBOX        IDC_COMBO_WAY,48,5,48,59,CBS_DROPDOWNLIST | CBS_SORT | 
-                    WS_VSCROLL | WS_TABSTOP
-    EDITTEXT        IDC_EDIT_NAME,112,4,60,14,ES_AUTOHSCROLL
+                    DTS_RIGHTALIGN | WS_TABSTOP,228,49,59,15
+    DEFPUSHBUTTON   "查询",IDOK,296,50,38,14
+    PUSHBUTTON      "导出",IDC_EXCEL,342,50,38,14
+    CONTROL         "List1",IDC_LIST_FI,"SysListView32",LVS_REPORT | 
+                    WS_BORDER | WS_TABSTOP,0,83,413,234
+    LTEXT           "从",IDC_STATIC,135,54,9,8
+    LTEXT           "到",IDC_STATIC,214,54,9,8
+    LTEXT           "订单号：",IDC_STATIC,26,56,33,8
+    LTEXT           "订单号：",IDC_STATIC,28,15,33,8
+    GROUPBOX        "增加/修改",IDC_STATIC,7,1,382,34
+    GROUPBOX        "查询",IDC_STATIC,7,38,382,34
 END
 
 IDD_DIALOG_MODIFY_PASSWD_ADMIN DIALOG DISCARDABLE  0, 0, 187, 148
@@ -509,9 +517,11 @@ BEGIN
     LTEXT           "用户名：",IDC_STATIC,21,25,46,8
     GROUPBOX        "用户权限设置",IDC_STATIC,15,71,348,94
     LTEXT           "部门：",IDC_STATIC,21,51,25,8
+    CONTROL         "财务",IDC_CHECK_FI,"Button",BS_AUTOCHECKBOX | 
+                    WS_TABSTOP,320,113,32,10
 END
 
-IDD_DIALOG_NEW_LIST DIALOGEX 0, 0, 562, 395
+IDD_DIALOG_NEW_LIST DIALOGEX 0, 0, 562, 375
 STYLE WS_CHILD
 FONT 12, "宋体"
 BEGIN
@@ -562,11 +572,11 @@ BEGIN
     EDITTEXT        IDC_EDIT_VOLUEME,452,221,54,14,ES_AUTOHSCROLL
     CONTROL         "",IDC_RICHEDIT_OTHER,"RICHEDIT",ES_MULTILINE | 
                     ES_AUTOVSCROLL | WS_BORDER | WS_TABSTOP,86,245,424,25
-    PUSHBUTTON      "保存订单",IDC_BUTTON_SUBMITLIST,130,290,50,14
-    PUSHBUTTON      "取消",IDCANCEL,235,290,50,14,NOT WS_VISIBLE
-    DEFPUSHBUTTON   "确定",IDOK,331,291,50,14,NOT WS_VISIBLE
-    EDITTEXT        IDC_EDIT1_TRUE_NUMBER,122,347,50,14,ES_AUTOHSCROLL
-    PUSHBUTTON      "下单",IDC_BUTTON_START_LIST,236,347,50,14
+    PUSHBUTTON      "保存订单",IDC_BUTTON_SUBMITLIST,130,284,50,14
+    PUSHBUTTON      "取消",IDCANCEL,235,284,50,14,NOT WS_VISIBLE
+    DEFPUSHBUTTON   "确定",IDOK,331,285,50,14,NOT WS_VISIBLE
+    EDITTEXT        IDC_EDIT1_TRUE_NUMBER,122,333,50,14,ES_AUTOHSCROLL
+    PUSHBUTTON      "下单",IDC_BUTTON_START_LIST,236,333,50,14
     EDITTEXT        IDC_EDIT_DEPARTMENT,88,91,6,12,ES_AUTOHSCROLL | NOT 
                     WS_VISIBLE
     EDITTEXT        IDC_EDIT_SIZE,86,173,6,14,ES_AUTOHSCROLL | NOT 
@@ -583,8 +593,8 @@ BEGIN
                     WS_VISIBLE
     EDITTEXT        IDC_EDIT_BILL,452,197,6,14,ES_AUTOHSCROLL | NOT 
                     WS_VISIBLE
-    PUSHBUTTON      "结单",IDC_BUTTON_END_LIST,327,347,50,14,NOT WS_VISIBLE
-    GROUPBOX        "订单资料",IDC_STATIC,15,7,537,310
+    PUSHBUTTON      "结单",IDC_BUTTON_END_LIST,327,333,50,14,NOT WS_VISIBLE
+    GROUPBOX        "订单资料",IDC_STATIC,15,7,537,300
     LTEXT           "订单号：",IDC_STATIC,43,53,42,8
     LTEXT           "派单日期：",IDC_STATIC,176,97,41,8
     LTEXT           "订单名称：",IDC_STATIC,176,53,41,8
@@ -601,14 +611,14 @@ BEGIN
     LTEXT           "体积：",IDC_STATIC,427,227,25,8
     LTEXT           "误差范围：",IDC_STATIC,219,227,42,8
     LTEXT           "其他要求：",IDC_STATIC,43,251,41,8
-    LTEXT           "数量：",IDC_STATIC,73,353,31,8
+    LTEXT           "数量：",IDC_STATIC,73,339,31,8
     LTEXT           "收件人：",IDC_STATIC,43,75,39,8
     LTEXT           "经办人：",IDC_STATIC,310,53,37,8
     LTEXT           "生产数量：",IDC_STATIC,312,179,41,8
     LTEXT           "打磨：",IDC_STATIC,234,203,26,8
     LTEXT           "发票随寄：",IDC_STATIC,411,203,40,8
     LTEXT           "用途：",IDC_STATIC,43,227,30,8
-    GROUPBOX        "下单",IDC_STATIC,15,329,537,51
+    GROUPBOX        "下单",IDC_STATIC,15,315,537,47
     GROUPBOX        "基本信息",IDC_STATIC,28,32,513,83
     GROUPBOX        "制作要求",IDC_STATIC,28,133,513,143
     LTEXT           "（",IDC_STATIC,324,155,8,8
@@ -848,16 +858,16 @@ BEGIN
     PUSHBUTTON      "取消",IDC_BUTTON2,327,212,50,14,NOT WS_VISIBLE
     PUSHBUTTON      "退账",IDC_BUTTON_POST,127,212,50,14
     LTEXT           "部门：",IDC_STATIC,41,36,25,8
-    LTEXT           "过账单号：",IDC_STATIC,37,66,41,8
-    LTEXT           "过账数量：",IDC_STATIC,186,66,41,8
-    LTEXT           "过账单号：",IDC_STATIC,37,94,41,8
-    LTEXT           "过账数量：",IDC_STATIC,186,94,41,8
-    LTEXT           "过账单号：",IDC_STATIC,37,124,41,8
-    LTEXT           "过账数量：",IDC_STATIC,186,124,41,8
-    LTEXT           "过账单号：",IDC_STATIC,37,153,41,8
-    LTEXT           "过账数量：",IDC_STATIC,186,153,41,8
-    LTEXT           "过账单号：",IDC_STATIC,37,182,41,8
-    LTEXT           "过账数量：",IDC_STATIC,186,182,41,8
+    LTEXT           "退账单号：",IDC_STATIC,37,66,41,8
+    LTEXT           "退账数量：",IDC_STATIC,186,66,41,8
+    LTEXT           "退账单号：",IDC_STATIC,37,94,41,8
+    LTEXT           "退账数量：",IDC_STATIC,186,94,41,8
+    LTEXT           "退账单号：",IDC_STATIC,37,124,41,8
+    LTEXT           "退账数量：",IDC_STATIC,186,124,41,8
+    LTEXT           "退账单号：",IDC_STATIC,37,153,41,8
+    LTEXT           "退账数量：",IDC_STATIC,186,153,41,8
+    LTEXT           "退账单号：",IDC_STATIC,37,182,41,8
+    LTEXT           "退账数量：",IDC_STATIC,186,182,41,8
     LTEXT           "总体积：",IDC_STATIC1,305,66,47,8,NOT WS_VISIBLE
     EDITTEXT        IDC_EDIT_VOLUME_SENDID,355,60,74,14,ES_AUTOHSCROLL | NOT 
                     WS_VISIBLE
@@ -892,6 +902,78 @@ BEGIN
     LTEXT           "订单号：",IDC_STATIC,5,12,33,8
     LTEXT           "从",IDC_STATIC,127,10,9,8
     LTEXT           "到",IDC_STATIC,207,9,9,8
+END
+
+IDD_TIPS_SETTING DIALOG DISCARDABLE  0, 0, 177, 129
+STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "提醒设置"
+FONT 12, "宋体"
+BEGIN
+    CONTROL         "登录提醒",IDC_CHECK_LOGINTIPS,"Button",BS_AUTOCHECKBOX | 
+                    WS_TABSTOP,27,16,48,10
+    CONTROL         "定时提醒",IDC_CHECK_TIMERTIPS,"Button",BS_AUTOCHECKBOX | 
+                    WS_TABSTOP,27,38,48,10
+    EDITTEXT        IDC_EDIT1,72,59,22,12,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT2,103,59,22,12,ES_AUTOHSCROLL
+    DEFPUSHBUTTON   "确定",IDOK,23,108,50,14,WS_GROUP
+    PUSHBUTTON      "取消",IDC_BUTTON1,95,108,50,14
+    LTEXT           "提醒时间：",IDC_STATIC,27,62,41,8
+    LTEXT           ":",IDC_STATIC,95,60,8,8
+    LTEXT           "（提醒设置，只有在重启此软件后才生效）",IDC_STATIC_TIPS,
+                    21,86,153,8
+END
+
+IDD_DIALOG_TIPS DIALOG DISCARDABLE  0, 0, 280, 152
+STYLE DS_MODALFRAME | WS_MINIMIZEBOX | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "提醒"
+FONT 12, "宋体"
+BEGIN
+    LTEXT           "下面是停留在技术部的订单：",IDC_STATIC_TIPS,14,13,105,8
+    CONTROL         "List2",IDC_LIST_TIPS,"SysListView32",LVS_REPORT | 
+                    WS_BORDER | WS_TABSTOP,15,28,249,95
+    CONTROL         "下次不在提醒",IDC_CHECK_TIPS,"Button",BS_AUTOCHECKBOX | 
+                    WS_TABSTOP,15,130,64,10
+END
+
+IDD_DIALOG_MENU_POST DIALOG DISCARDABLE  0, 0, 188, 133
+STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "过账"
+FONT 12, "宋体"
+BEGIN
+    EDITTEXT        IDC_EDIT_VOLUME_SENDID,82,86,81,14,ES_AUTOHSCROLL
+    DEFPUSHBUTTON   "过账",IDOK,20,109,50,14
+    PUSHBUTTON      "取消",IDCANCEL,104,109,50,14
+    COMBOBOX        IDC_COMBO_DEPARTMENT,82,10,81,94,CBS_DROPDOWNLIST | 
+                    CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    EDITTEXT        IDC_EDIT_POST_NUM,82,62,81,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_LISTID,82,35,81,14,ES_AUTOHSCROLL | WS_DISABLED
+    LTEXT           "部门：",IDC_STATIC,19,14,25,8
+    LTEXT           "订单号：",IDC_STATIC,19,41,33,8
+    LTEXT           "过账数量：",IDC_STATIC,19,68,41,8
+    LTEXT           "总体积(cm3):",IDC_STATIC1,19,92,63,8
+END
+
+IDD_DIALOG_OUTPUT1 DIALOG DISCARDABLE  0, 0, 420, 310
+STYLE WS_CHILD
+FONT 12, "宋体"
+BEGIN
+    DEFPUSHBUTTON   "查询",IDOK,331,3,38,14
+    COMBOBOX        IDC_COMBO_OUTPUT,112,5,60,124,CBS_DROPDOWNLIST | 
+                    CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "List1",IDC_LIST_OUTPUT,"SysListView32",LVS_REPORT | 
+                    WS_BORDER | WS_TABSTOP,0,24,413,286
+    LTEXT           "部门：",IDC_STATIC_DEPARTMENT,98,9,8,8,NOT WS_VISIBLE
+    CONTROL         "DateTimePicker1",IDC_DATETIMEPICKER1,"SysDateTimePick32",
+                    DTS_RIGHTALIGN | WS_TABSTOP,196,2,60,15
+    CONTROL         "DateTimePicker2",IDC_DATETIMEPICKER2,"SysDateTimePick32",
+                    DTS_RIGHTALIGN | WS_TABSTOP,269,2,59,15
+    LTEXT           "从",IDC_STATIC,183,7,9,8
+    LTEXT           "到",IDC_STATIC,257,7,9,8
+    PUSHBUTTON      "导出",IDC_EXCEL,375,3,38,14
+    LTEXT           "查询方式：",IDC_STATIC,6,9,41,8
+    COMBOBOX        IDC_COMBO_WAY,48,5,48,59,CBS_DROPDOWNLIST | CBS_SORT | 
+                    WS_VSCROLL | WS_TABSTOP
+    EDITTEXT        IDC_EDIT_NAME,112,4,60,14,ES_AUTOHSCROLL
 END
 
 
@@ -1022,7 +1104,7 @@ BEGIN
     BEGIN
         RIGHTMARGIN, 560
         TOPMARGIN, 7
-        BOTTOMMARGIN, 389
+        BOTTOMMARGIN, 369
     END
 
     IDD_DIALOG_MODIFY_LIST1, DIALOG
@@ -1038,6 +1120,22 @@ BEGIN
         TOPMARGIN, 7
         BOTTOMMARGIN, 347
     END
+
+    IDD_DIALOG_TIPS, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 273
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 145
+    END
+
+    IDD_DIALOG_MENU_POST, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 181
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 126
+    END
 END
 #endif    // APSTUDIO_INVOKED
 
@@ -1049,9 +1147,9 @@ END
 
 IDR_MENU1 MENU DISCARDABLE 
 BEGIN
-    POPUP "删除"
+    POPUP "设置"
     BEGIN
-        MENUITEM "删除",                        ID_MENUITEM_INPUTSELL
+        MENUITEM "提醒设置",                    ID_MENUITEM_INPUTSELL
     END
 END
 
@@ -1076,6 +1174,25 @@ BEGIN
     POPUP "关于"
     BEGIN
         MENUITEM "关于货物管理系统",            IDM_HELP
+    END
+END
+
+IDR_MENU_TIPS MENU DISCARDABLE 
+BEGIN
+    POPUP "设置"
+    BEGIN
+        MENUITEM "提醒设置",                    ID_MENUITEM_TIPS
+    END
+END
+
+IDR_MENU_POST MENU DISCARDABLE 
+BEGIN
+    POPUP "过账"
+    BEGIN
+        MENUITEM "过账(技术部)",                ID_MENUITEM_POST_TC
+        MENUITEM "过账(生产部)",                ID_MENUITEM_POST_PD
+        MENUITEM "过账(质检部)",                ID_MENUITEM_POST_QC
+        MENUITEM "过账(成品仓)",                ID_MENUITEM_POST_STORAGE
     END
 END
 
