--- a/config.ini
+++ b/config.ini
@@ -1,1 +1,8 @@
-serverip=192.168.10.50
+[ServiceIP]
+LastIP=192.168.0.105
+[UserName]
+LastName=admin
+[Tips]
+LoginTips=1
+TimerTips=1
+Timer=20:01
