add xpbutton,process,background 1.add xpbutton 2.add process 3.listctrl can edit 4.已结单的订单不可以修改 5.set the color of background

--- a/config.ini
+++ b/config.ini
@@ -1,8 +1,11 @@
 [ServiceIP]
 LastIP=192.168.0.105
+Port=3306
 [UserName]
 LastName=admin
 [Tips]
 LoginTips=1
 TimerTips=1
 Timer=20:01
+[Open_process]
+open=1
