订单进度加入部门选择 所有treedlg初始化为null

--- a/GoodsManageSystem.rc
+++ b/GoodsManageSystem.rc
@@ -341,25 +341,28 @@ BEGIN
     LTEXT           "用户名：",IDC_STATIC,26,25,37,8
 END
 
-IDD_DIALOG_SCHEDULE DIALOG DISCARDABLE  0, 0, 483, 306
+IDD_DIALOG_SCHEDULE DIALOG DISCARDABLE  0, 0, 564, 306
 STYLE WS_CHILD
 FONT 12, "宋体"
 BEGIN
-    DEFPUSHBUTTON   "查询",IDC_BUTTON_SCHDEULE_SELECT,394,4,38,14
-    COMBOBOX        IDC_COMBO_SCHEDULE,45,5,81,60,CBS_DROPDOWNLIST | 
+    DEFPUSHBUTTON   "查询",IDC_BUTTON_SCHDEULE_SELECT,451,4,38,14
+    COMBOBOX        IDC_COMBO_SCHEDULE,126,6,81,60,CBS_DROPDOWNLIST | 
                     CBS_SORT | WS_VSCROLL | WS_TABSTOP
     CONTROL         "List1",IDC_LIST_SCHDEULE,"SysListView32",LVS_REPORT | 
-                    WS_BORDER | WS_TABSTOP,0,23,483,283
-    LTEXT           "查询方式：",IDC_STATIC,5,8,40,8
-    COMBOBOX        IDC_COMBO2,128,5,78,67,CBS_DROPDOWNLIST | CBS_SORT | 
+                    WS_BORDER | WS_TABSTOP,0,23,564,283
+    LTEXT           "查询方式：",IDC_STATIC,86,7,40,8
+    COMBOBOX        IDC_COMBO2,211,6,78,67,CBS_DROPDOWNLIST | CBS_SORT | 
                     WS_VSCROLL | WS_TABSTOP
     CONTROL         "DateTimePicker1",IDC_DATETIMEPICKER1,"SysDateTimePick32",
-                    DTS_RIGHTALIGN | WS_TABSTOP,235,4,60,15
+                    DTS_RIGHTALIGN | WS_TABSTOP,311,3,60,15
     CONTROL         "DateTimePicker2",IDC_DATETIMEPICKER2,"SysDateTimePick32",
-                    DTS_RIGHTALIGN | WS_TABSTOP,317,3,59,15
-    LTEXT           "从",IDC_STATIC,217,8,9,8
-    LTEXT           "到",IDC_STATIC,301,7,9,8
-    PUSHBUTTON      "导出",IDC_EXCEL,438,4,38,14
+                    DTS_RIGHTALIGN | WS_TABSTOP,385,3,59,15
+    LTEXT           "从",IDC_STATIC,296,8,9,8
+    LTEXT           "到",IDC_STATIC,375,7,9,8
+    PUSHBUTTON      "导出",IDC_EXCEL,494,4,38,14
+    LTEXT           "部门：",IDC_STATIC,5,7,25,8
+    COMBOBOX        IDC_COMBO_DEPARTMENT,35,6,49,90,CBS_DROPDOWNLIST | 
+                    CBS_SORT | WS_VSCROLL | WS_TABSTOP
 END
 
 IDD_DIALOG_POST DIALOG DISCARDABLE  0, 0, 680, 430
